finished chapter 4 and added first table to chapter 5

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap4.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap4.tex
@@ -1,6 +1,18 @@
 \paragraph{}O objetivo deste capitulo é descrever o método utilizado no desenvolvimento do trabalho. Será descrito o fluxo de dados utilizado na previsão do PLD. Isso inclui o pré-processamento dos dados e o treinamento das redes neurais.
 
-[GRÁFICO DO FLUXO DE DADOS]
+\begin{figure}[H]
+	\begin{center}
+		{
+			\begin{center}
+				
+				\includegraphics[width=\textwidth]{esquema_processamento_tcc.jpg}		
+				\caption[\small{Diagrama do Método.}]{\label{esquematicoProcessamento} \small{Diagrama do Método.}}
+				
+			\end{center}
+			
+		}	
+	\end{center}	
+\end{figure}
 
 \section{Coleta de dados}
 \paragraph{}Serão utilizados nos modelos os seguintes dados do setor elétrico:
