Changes to chapter 5

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap1.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap1.tex
@@ -1,4 +1,8 @@
+\paragraph{}Neste capítulo, será introduzido o tema do projeto, além de mostrar a relevância do mesmo e quais são métodos serão utilizados para alcançar o determinado objetivo. Ao final exibida a estrutura organizacional do texto.
+
 \section{Tema}
+
+\paragraph{}O mercado elétrico brasileiro é bastante diferente 
 
 \paragraph{}Falar do que se trata o trabalho usando uma visão macroscópica (tamanho do texto: 1 ou 2 parágrafos no máximo).
 
